--- a/client/package.json
+++ b/client/package.json
@@ -9,13 +9,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@react-three/drei": "^9.65.4",
+    "@react-three/drei": "^9.77.10",
     "@react-three/fiber": "^8.12.1",
     "framer-motion": "^10.12.4",
     "maath": "^0.5.3",
     "react": "^18.2.0",
     "react-color": "^2.19.3",
     "react-dom": "^18.2.0",
+    "react-error-boundary": "^4.0.10",
     "three": "^0.151.3",
     "valtio": "^1.10.4"
   },
